get quiz sessions detail